--- a/index.htm
+++ b/index.htm
@@ -116,8 +116,8 @@ To reduce the manufacturing and sale of illegal firearms to reduce crimes relate
 <p align="justify">The law is necessary to regulate and prevent the citizens from doing such acts that threaten the lives of others and themselves.</p>
 <p align="justify">According to a small arms survey, more than six crore illegal firearms are present in India, despite such strict laws, which became a reason to promote more crimes like murder, robbery, extortion, kidnapping and many more. As we mentioned above, 90% of homicide gets done by illegal firearms.</p>
 <p align="justify">The main objective of the Arms act is to control arms and ammunition crimes and reduce the trafficking of illegal weapons which causes crimes.</p></font color>
-<a href="https://kharanshu53.github.io/index/"> click here to open main webpage </a>
-       <a href="https://kharanshu53.github.io/Guns-Map-Price/">Click here to open map of gun shops</a>
-       <a href="https://kharanshu53.github.io/gunsdetailsandimages/">Click here to open gun images and details</a>
+<a href="https://kharanshu53.github.io/index/"> click here to open main webpage </a><br>
+       <a href="https://kharanshu53.github.io/Guns-Map-Price/">Click here to open map of gun shops</a><br>
+       <a href="https://kharanshu53.github.io/gunsdetailsandimages/">Click here to open gun images and details</a><br>
 </font face></body>
 </html>
